--- a/11-API-OPENDATASOFT.qmd
+++ b/11-API-OPENDATASOFT.qmd
@@ -16,7 +16,8 @@ On charge les packages utiles :
 library(knitr)
 library(httr)
 library(jsonlite)
-library(dplyr)
+library(tidyverse)
+library(ggplot2)
 ```
 
 
@@ -49,7 +50,7 @@ kable(head(cat[,c(12,1,6,7,8)]),row.names = F)
 
 
 
-On suppose que le choix s'est porté sur l'API *arbresremarquablesparis2011*
+On suppose que le choix s'est porté sur l'API *prix-des-carburants-j-1*
 
 ```{r, echo=FALSE}
 knitr::include_graphics("img/arbres1.png")
@@ -64,7 +65,7 @@ Avant de télécharger les données, on effectue une requête pour connaître le
 ### Programme
 
 ```{r}
-tab<-"arbresremarquablesparis2011"
+tab<-"prix-des-carburants-j-1"
 url<-paste("https://public.opendatasoft.com/api/v2/catalog/datasets/",tab,"?",sep="")
 x<-GET(url)
 y<-fromJSON(rawToChar(x$content))
@@ -76,10 +77,10 @@ head(var)
 ```
 
 
-Le tableau est correct, mais il présente une structure inhabituelle puisqu'on trouve un dataframe à l'intérieur de chaque ligne de la variable annotations. On va donc éviter les ennuis en ne gardant que les deux premières colonnes
+On extrait du tableau les colonnes qui fournissent le nom des variables, leur définition et leur type
 
 ```{r}
-var <- var  %>% select(-annotations)
+var <- var  %>% select(name, label, type)
 kable(var)
 ```
 
@@ -88,12 +89,12 @@ kable(var)
 On le transforme en fonction pour un usage plus simple : 
 
 ```{r}
-get_variables<-function(idtab = "arbresremarquablesparis2011") {
+get_variables<-function(idtab = "prix-des-carburants-j-1") {
   url<-paste("https://public.opendatasoft.com/api/v2/catalog/datasets/",idtab,"?",sep="")
   x<-GET(url)
   y<-fromJSON(rawToChar((x$content)))
   var<-y$dataset$fields
-  var <- var %>% select(-annotations)
+  var <- var %>% select(name, label, type)
   return(var)
 }
 ```
@@ -107,190 +108,251 @@ kable(var)
 
 ## Récupération des données
 
-### Programme
 
-Par défaut, une API renvoie 10 enregistrements, ce qui permet de se faire une première idée de la structure des données
+Pour des utilisateurs non spécialiste des API, il est difficile de lancer une requête complexe qui suppose une maîtrise avancée du langage de requête. Nous allons donc opter pour une **stratégie pragmatique** (mais efficace) qui consiste à :
+
+1. Utiliser l'interface public.opendatasoft pour rédiger une requête
+2. Récupérer le lien de téléchargement
+3. Télécharger les données correspondant à la requête 
+4. Effectuer les opérations de nettoyage des données et réaliser un graphique
+5. Modifier le lien et effectuer à nouveau le étapes 3 et 4
+6. Construire une fonction paramétrique de téléchargement + nettoyage + visualisation ...
+
+Pour illustrer cette stratégie, nous allons essayer de créer une application web qui donne le prix du carburant en fonction de deux paramètres, la localisation de l'automobiliste et le type de carburant choisi. Nous allons ainsi essayer de reconstituer une application du ministère de l'économie intitulée ["essence pas cher"](https://www.essence-pas-cher.fr/).
+
+
+
+![Essence pas cher](img/essence-pas-cher.jpg)
+
+
+
+### 1. Rédaction d'une requête sur public opendatasoft
+
+
+On utilise les filtres de l'interface pour sélectionner la commune cible à l'aide de son code postal (ex. 94370 = Sucy-en-Brie) et du type carburant (ex. Gazole) : 
+
+![Filtres](img/essence-001.jpg)
+
+### 2. Récupération du lien de téléchargement
+
+Une fois terminée la mise en place des filtres, on se déplace vers la fenêtre "Export" et on choisit le type de format de sortie que l'on souhaite obtenir. Nous pourrions obtenir des fichiers au format texte (.csv) ou tableur (.xls) mais nous allons adopter ici le format .json qui est plus universel dans le domaine de la data science et qui simplifie les transferts entre langages tels que R ou Python.
+
+Un click de souris sur le lien permet de récupérer l'URL de téléchargement : 
+
+![URL](img/essence-002.jpg)
+
+Même si certains caractères spéciaux sont difficiles à comprendre comme **%3A** ou **%22** on devine assez facilement la fonction des différents segments de la requête : 
+
+- URL du site web opendatasoft : *https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/*
+- choix de la base de données : *prix-des-carburants-j-1*
+- format d'export et langue : *exports/json?lang=fr*
+- selection du carburant : *&refine=fuel%3A%22Gazole%22*
+- selection de la commune par son code postal : *&qv1=(94370)*
+- fuseau horaire (pour dater la requête) : *&timezone=Europe%2FParis*
+
+
+### 3. Recupération des données à partir de l'URL
+
+Nous pouvons maintenant rédiger un petit programme qui va récupérer les données à partir de ce lien
+
 
 ```{r}
+link<-"https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/prix-des-carburants-j-1/exports/json?lang=fr&refine=fuel%3A%22Gazole%22&qv1=(94370)&timezone=Europe%2FParis"
+y<-fromJSON(link)
+head(y)
+```
 
- x<-GET("https://public.opendatasoft.com/api/records/1.0/search/?dataset=arbresremarquablesparis2011&q=&rows=10")
-y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
-kable(don)
+### 4. Nettoyage des données
+
+
+Nous procédons ensuite à un petit nettoyage pour ne garder que les variables utiles :
+
+```{r}
+names(y)
+don <- y %>% select(name,address, update, price = price_gazole ) %>% 
+  mutate(update =as.Date(update)) %>%
+  arrange(update)
 
 ```
 
-### Fonction
-
-On peut ensuite écrire une fonction qui précise le nombre d'enregistrements à lire avec le paramètre `raws=` et le point de départ de la lecture avec le paramètre `start=` (sachant que le premier enregistrement correspond à la valeur 0). On pourra ensuite procéder à des téléchargements successifs en évitant de dépasser la valeur `raws=10000` car en génral cela bloque le fonctionnement des API. Pour télécharger un tableau ayant plus de 10000 lignes, il faudra de préférence créer une boucle qui ramène des paquets de 10000.
+Il y a toutefois une mauvaise surprise ... les données semblent erronées à partir d'une certaine date 
 
 ```{r}
-get_data<-function(idtab = "arbresremarquablesparis2011",
-                  rows=10,
-                  start=0) {
-  url<-paste0("https://public.opendatasoft.com/api/records/1.0/search/?dataset=",idtab,"&q=&rows=",rows,"&start=",start,sep="")
-  x<-GET(url)
-  y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
-  return(don)
+ggplot(don) +aes(x=update, y=price, col=address) + geom_point()
+```
+
+En fait ... les chiffres qui sont fournis après le 26 mars ont été divisés mystérieusement par 1000. Il faut donc corriger ce problème :
+
+```{r}
+library(ggplot2)
+don<-don %>%  mutate(price_OK = case_when(price ==0 ~ NA,
+                             price < 1 ~ price*1000,
+                             TRUE ~ price))
+ggplot(don) +aes(x=update, y=price_OK, col=address) + geom_point()
+```
+
+On note qu'il este une valeur aberrante mais sinon il est désormais possible de bien suivre l'évolution des prix au cours des trois dernières années et de repérer quelles est la station la moins chèr aux différentes dates.
+
+
+### 5. Changement de lien
+
+Essayons maintenant de reprendre l'ensemble de notre programme en changeant juste de commune dans le lien initial. On va ici soigner la rédaction du programme
+
+On remplace le code postal de Sucy-en-Brie (94370) par celui d'Ivry-sur-Seine(94200)
+
+
+```{r}
+# Choix du lien (changement du code postal)
+link<-"https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/prix-des-carburants-j-1/exports/json?lang=fr&refine=fuel%3A%22Gazole%22&qv1=(94200)&timezone=Europe%2FParis"
+
+# Importation des données
+y<-fromJSON(link)
+
+# Selection des variables
+don <- y %>% select(name,address, update, price = price_gazole ) %>% 
+  mutate(update =as.Date(update)) %>%
+  arrange(update)
+
+# Nettoyage des erreurs principales
+don<-don %>%  mutate(price_OK = case_when(price ==0 ~ NA,
+                             price < 1 ~ price*1000,
+                             TRUE ~ price))
+
+# Réalisation d'un graphique
+ggplot(don) +aes(x=update, y=price_OK, col=address) + geom_point()
+
+```
+
+
+
+
+
+
+### 6. Rédaction d'une Fonction
+
+On peut maintenant écrire une fonction qui ne va dépendre que du code postal et va fournir en sortie le tableau de données. Tout ce que nous avons à faire est de modifier le lien en fonction du code postal qui sera le paramètre de la fonction :
+
+
+
+```{r}
+
+gazole_tab <- function(code="94370") { 
+# Choix du lien (changement du code postal)
+link<-paste0("https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/prix-des-carburants-j-1/exports/json?lang=fr&refine=fuel%3A%22Gazole%22&qv1=(", code,")&timezone=Europe%2FParis")
+
+# Importation des données
+y<-fromJSON(link)
+
+# Selection des variables
+tab <- y %>% select(name,address, update, price = price_gazole ) %>% 
+  mutate(update =as.Date(update)) %>%
+  arrange(update)
+
+# Nettoyage des erreurs principales
+tab<-tab %>%  mutate(price_OK = case_when(price ==0 ~ NA,
+                             price < 1 ~ price*1000,
+                             TRUE ~ price))
+
+return(tab)
+
 }
 
+
 ```
 
-Dans le cas du tableau des arbres remarquables à paris, il n'y a que 178 enregistrements et il suffit donc de mettre une valeur de raws supérieure pour récupérer tout le tableau :
+
+Pour tester la fonction, on prend une nouvelle commune, par exemple Saint-Maur des Fossés (94100) :
 
 ```{r}
-don_arbres <- get_data(idtab = "arbresremarquablesparis2011",
-                      rows=1000,
-                      start=0)
-dim(don_arbres)
-kable(head(don_arbres))
+res<-gazole_tab("94100")
+head(res)
 ```
 
-Si l'on prend l'exemple de la qualité de l'air, le tableau est nettement plus grand mais reste sous la valeur de 10000 enregistrements
+
+On pourrait aussi faire une fonction qui renvoie non pas le tableau mais le graphique :
 
 ```{r}
-don_air <- get_data(idtab = "qualite-de-lair-france",
-                      rows=10000,
-                      start=0)
-dim(don_air)
-kable(head(don_air))
-```
 
-Par contre la base SIRENE  comporte 34 millions d'enregistrement et il va être impossible de la télécharger d'un coup à l'aide d'une API. Dès que la valeur rows dépasse 10000, l'API refuse de renvoyer les résultats
+gazole_graph <- function(code="94370") { 
+# Choix du lien (changement du code postal)
+link<-paste0("https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/prix-des-carburants-j-1/exports/json?lang=fr&refine=fuel%3A%22Gazole%22&qv1=(", code,")&timezone=Europe%2FParis")
 
-```{r}
-don_sir <- get_data(idtab = "sirene_v3",
-                      rows=10001,
-                      start=0)
-dim(don_sir)
-```
+# Importation des données
+y<-fromJSON(link)
 
-## Sélection ou exclusion
+# Selection des variables
+don <- y %>% select(name,address, update, price = price_gazole ) %>% 
+  mutate(update =as.Date(update)) %>%
+  arrange(update)
 
-L'intérêt principal d'une API est de procéder à des sélections d'enregistrement en amont de leur téléchargement. On va utiliser pour cela les facettes qui correspondent aux variables pour lesquelles l'API a prévu des index permettant une extraction rapide.
+# Nettoyage des erreurs principales
+don<-don %>%  mutate(price_OK = case_when(price ==0 ~ NA,
+                             price < 1 ~ price*1000,
+                             TRUE ~ price))
 
-### Sélection
+# Réalisation d'un graphique
+graph<-ggplot(don) +aes(x=update, y=price_OK, col=address) + geom_point()
 
-Supposons par exemple qu'on ne veuille extraire que les arbres remarquables de la famille des chênes (genre = Quercus). Cela correspond à l'ajout à la fin de l'instruction GET d'une instruction `refine` prenant ici la forme `refine.genre=Quercus`.
+return(graph)
 
-```{r}
-x<- GET("https://public.opendatasoft.com/api/records/1.0/search/?dataset=arbresremarquablesparis2011&q=&rows=100&refine.genre=Quercus")
-  y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
-  kable(don)
-```
-
-
-### Exclusion
-
-On peut de la même manière exclure au lieu de sélectionner en utilisant l'instruction `exclude`. Par exemple, on peut retirer les deux bois de Vincennes et de Boulogne qui sont identifiés dans la variable arrondissement. Il ne rste plus alors que 130 arbres remarquables au lieu de 178.
-
-```{r}
-x<- GET("https://public.opendatasoft.com/api/records/1.0/search/?dataset=arbresremarquablesparis2011&q=&rows=1000&exclude.arrondissement=BOIS+DE+VINCENNES&exclude.arrondissement=BOIS+DE+BOULOGNE")
-  y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
- dim(don)
- table(don$arrondissement)
-```
-
-
-
-### Sélection géographique
-
-Une autre possibilité offerte par l'application est d'extraire des enregistrements en fonction d'une localisation géographique et d'une distance maximale à celle-ci. Supposons par exemple que l'on souhaite trouver l'ensemble des arbres remarquables dans un rayon de 2 km autour du bâtiment Olympe de Gouges situé place Paul Ricoeur dans le 13e arrondissement.  Pour résoudre le problème, on commence par déterminer les coordonnées du lieu cible ce qui peut se faire par un click droit dans une Google Map : 
-
-```{r,fig.width=3}
-knitr::include_graphics("img/coord_odg.png")
-```
-
-On passe ensuite une requête incluant le paramètre `geofilter.distance()`assortie des trois paramètres de latitude (en degré décimal), longitude (en degré décimal) et distance (en mètres) avec comme séparateur `%2C`ce qui donne au final un tableau ne comportant que 3 arbres remarquables à moins de deux kilomètres du point choisi :
-
-```{r, eval=F}
-
-x<-GET("https://public.opendatasoft.com/api/records/1.0/search/?dataset=arbresremarquablesparis2011&q=&rows=1000&geofilter.distance=48.82670%2C2.38242%2C2000")
-  y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
-don <-don%>% select(adresse, libellefrancais, dist, hauteurenm, circonferenceencm)
-kable(don)
-```
-
-### Fonction
-
-Nous pouvons alors créer une petite fonction qui va automatiquement sélectionner les arbres en fonction d'une coordonnée et d'une distance choisies par l'utilisateur :
-
-```{r}
-get_data_geo<-donnees<-function(idtab = "arbresremarquablesparis2011",
-                  rows=10,
-                  start=0,
-                  lat = 48.82670,
-                  lon = 2.38242,
-                  dist = 2000) {
-  url<-paste0("https://public.opendatasoft.com/api/records/1.0/search/?dataset=",idtab,
-              "&q=&rows=",rows,
-              "&start=",start,
-              "&geofilter.distance=", lat,"%2C", lon,"%2C",dist,
-              sep="")
-  
-  x<-GET(url)
-  y<-fromJSON(rawToChar((x$content)))
-  don<-y$records$fields
-  return(don)
 }
 
+
 ```
 
-Notre fonction est paramétrée par défaut sur la place Paul Ricoeur pour un rayon de 2000 mètres mais on peut ensuite changer les paramètres comme on le souhaite. On peut par exemple rechercher les arbres remarquables dans un rayon de 500 mètres autour de la cathédrale Notre Dame de Paris.
+
+
+On teste la fonction sur Saint-Maur des Fossés (94100) :
 
 ```{r}
-tab<-get_data_geo(idtab = "arbresremarquablesparis2011",
-                  rows=1000,
-                  start=0,
-                  lat = 48.85331,
-                  lon = 2.34907,
-                  dist = 500)
-kable(tab)
-```
-
-Mais notre fonction peut également marcher pour d'autres tableaux si ceux-ci ont la même structure. On peut ainsi examiner les entreprises localisées à moins de 50 mètres du bâtiment d'Olympe de Gouges à l'aide de la base SIREN et on trouve 11 références :
-
-
-
-```{r, eval=F}
-tab<-get_data_geo(idtab = "sirene_v3",
-                  rows=1000,
-                  start=0,
-                  lat = 48.82670,
-                  lon = 2.38242,
-                  dist = 50)
-tab<-tab %>% select(siret,l1_adressage_unitelegale, adresseetablissement,sectionetablissement,naturejuridiqueunitelegale)
-kable(tab)
+gazole_graph("94100")
 
 ```
 
-## Exercice
-
-Essayez de récupérer les informations sur l'ensemble des ventes immobilières de maisons  commune de Montcuq-en-Quercy-Blanc (Code Postal 46800) au cours de l'année 2020 puis calculés le prix moyen par m2 de 
-
-**buildingref-france-demande-de-valeurs-foncieres-geolocalisee-millesime**
-
+Mais le plus intéressant est de faire une fonction qui permet de renvoyer à la fois le tableau et le graphique en indiquant en sortie une liste d'objets :
 
 ```{r}
 
- x<-GET("https://public.opendatasoft.com/api/records/1.0/search/?dataset=buildingref-france-demande-de-valeurs-foncieres-geolocalisee-millesime&q=montcuq&refine.date_mutation=2020&refine.type_local=Maison&rows=1000")
+gazole <- function(code="94370") { 
+# Choix du lien (changement du code postal)
+link<-paste0("https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/prix-des-carburants-j-1/exports/json?lang=fr&refine=fuel%3A%22Gazole%22&qv1=(", code,")&timezone=Europe%2FParis")
 
-w<-rawToChar((x$content))
-d<-fromJSON(w)
-t<-d$records$fields
+# Importation des données
+y<-fromJSON(link)
 
-don<-t %>% select(surface_reelle_bati,surface_terrain,valeur_fonciere) %>% 
-  mutate(prixm2 = valeur_fonciere/surface_reelle_bati)
+# Selection des variables
+tab <- y %>% select(name,address, update, price = price_gazole ) %>% 
+  mutate(update =as.Date(update)) %>%
+  arrange(update)
 
-kable(don)
-summary(don)
+# Nettoyage des erreurs principales
+tab<-tab %>%  mutate(price_OK = case_when(price ==0 ~ NA,
+                             price < 1 ~ price*1000,
+                             TRUE ~ price))
 
-plot(don$surface_reelle_bati,don$valeur_fonciere)
+# Réalisation d'un graphique
+graph<-ggplot(don) +aes(x=update, y=price_OK, col=address) + geom_point()
+
+return(list("tab"=tab, "graph"=graph))
+
+}
+
+
 ```
+
+
+
+Il suffit maintenant d'executer une seule fois la fonction (un seul appel de l'API) pour pouvoir ensuiteau choix utiliser le tableau ou afficher le graphique.
+
+
+```{r}
+res<-gazole("94100")
+head(res$tab)
+res$graph
+```
+
+
+
 
 
 
