--- a/13-API-CARTO.qmd
+++ b/13-API-CARTO.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Acquisition de données géographiques"
+title: "Acquisition"
 author: "Claude Grasland"
 format: html
 embed-resources: true
